updated with getActiveCatList api
