# lib/admin/adminRoute.js
@@ -117,4 +117,9 @@ adminRouter.route("/getAllCategory")
         adminService.getAllCategory(req, res)
     })
 
+adminRouter.route("/getActiveCatList")
+    .get([validate.verifyToken], (req, res) => {
+        adminService.getActiveCatList(req, res)
+    })
+
 module.exports = adminRouter;
